# SphereSLAM

./: .gitignore  CONCEPTUAL_BLUEPRINT.md  Guessing Google's Photo Sphere Source Code.md  LICENSE  README.md  TODO.md  build.gradle  csr.pem  jitpack.yml  settings.gradle  settings.gradle.kts  valid_cert.pem  valid_key.pem  version.properties
.github/workflows/: backup.yml  build.yml  ci.yml  dead_drop.yml  deploy_web.yml
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/example/sphereslam/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/hereliesaz/sphereslam/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: equirect_to_cubemap.comp
app/src/main/cpp/: CMakeLists.txt  Densifier.h  DepthAnyCamera.cpp  DepthAnyCamera.h  MobileGS.cpp  MobileGS.h  VulkanCompute.cpp  VulkanCompute.h  native-lib.cpp
app/src/main/cpp/SLAM/: Frame.cpp  Frame.h  GeometricCamera.h  Initializer.cpp  Initializer.h  KeyFrame.cpp  KeyFrame.h  KeyFrameDatabase.cpp  KeyFrameDatabase.h  LocalMapping.cpp  LocalMapping.h  LoopClosing.cpp  LoopClosing.h  Map.cpp  Map.h  MapPoint.cpp  MapPoint.h  ORBVocabulary.h  ORBextractor.h  Optimizer.cpp  System.cpp  System.h  Tracking.cpp  Tracking.h
app/src/main/cpp/Utils/: Profiler.h
app/src/main/java/com/example/sphereslam/: CameraManager.kt  MainActivity.kt
app/src/main/java/com/hereliesaz/sphereslam/: LogAdapter.kt  LogBottomSheetFragment.kt  LogListFragment.kt  LogManager.kt  LogModels.kt  LogViewModel.kt  MainActivity.kt
app/src/main/res/drawable/: circle_overlay.xml  circle_progress_bar.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  fragment_log_bottom_sheet.xml  item_log.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/test/java/com/example/sphereslam/: ExampleUnitTest.kt
app/src/test/java/com/hereliesaz/sphereslam/: ExampleUnitTest.kt
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
core/include/: Align.h  Blend.h  CDelaunay.h  Gaussian.h  Mosaic.h  Optimizer.h  PhotosphereStitcher.h  Platform.h  db_CornerDetector.h  db_Matcher.h  db_Optimizer.h  db_Types.h
core/include/Utils/: Profiler.h
core/src/SLAM/: Align.cpp  Blend.cpp  CDelaunay.cpp  Frame.cpp  Frame.h  GeometricCamera.h  GlobalOptimizer.cpp  Initializer.cpp  Initializer.h  KeyFrame.cpp  KeyFrame.h  LoopClosing.cpp  Map.cpp  Map.h  MapPoint.cpp  MapPoint.h  Mosaic.cpp  ORBextractor.cpp  ORBextractor.h  Optimizer.cpp  Optimizer_LC.cpp  PhotosphereStitcher.cpp  Settings.h  System.cpp  System.h  Tracking.cpp  Tracking.h  db_CornerDetector.cpp  db_Matcher.cpp
core/src/Utils/: Profiler.h
docs/: CONCEPTUAL_BLUEPRINT.md  Google Photo Sphere_ Source Code Reconstruction.md
ios_app/: Info.plist  SphereSLAMApp.swift  ViewController.swift
ios_lib/: CMakeLists.txt  PlatformIOS.h  PlatformIOS.mm  SphereSLAMBridge.h  SphereSLAMBridge.mm
libs/litert_sdk/litert_cc_sdk/: FindFlatBuffers.cmake  abseil-cpp.cmake  flatbuffers.cmake
libs/opencv-4.12.0/: README.txt
libs/opencv/sdk/native/jni/include/opencv2/core/: core.hpp
scripts/: build_ios.sh  build_opencv_wasm.sh  build_web.sh  export_dac.py  setup_keystore.sh
sphereslam/: build.gradle  build.gradle.kts
sphereslam/src/main/: AndroidManifest.xml
sphereslam/src/main/assets/shaders/: equirect_to_cubemap.spv
sphereslam/src/main/cpp/: CMakeLists.txt  Densifier.cpp  Densifier.h  DepthAnyCamera.cpp  DepthAnyCamera.h  MobileGS.cpp  MobileGS.h  PlatformAndroid.cpp  PlatformAndroid.h  VulkanCompute.cpp  VulkanCompute.h  native-lib.cpp
sphereslam/src/main/cpp/SLAM/: KeyFrame.cpp  KeyFrameDatabase.h  LoopClosing.cpp  Map.h  ORBextractor.cpp  Optimizer.h  Settings.cpp  System.cpp  System.h
sphereslam/src/main/java/com/hereliesaz/sphereslam/: LightCycleTargetManager.kt  LogManager.kt  MosaicFrameProcessor.kt  SphereCameraManager.kt  SphereSLAM.kt
sphereslam/src/main/java/com/sphereslam/: SphereCameraManager.kt
sphereslam/src/main/java/com/sphereslam/lib/: SphereCameraManager.kt  SphereSLAM.kt
sphereslam/src/test/java/com/hereliesaz/sphereslam/: SphereSLAMTest.kt
sphereslam/src/test/java/com/sphereslam/lib/: SphereSLAMTest.kt
web_app/: index.html  main.js  style.css
web_lib/: Bindings.cpp  CMakeLists.txt  OpenCVStubs.cpp  PlatformWeb.cpp  PlatformWeb.h  WebStubs.cpp
